# math-utils-lib

./: .gitmodules  CMakeLists.txt
include/math-utils-lib/: constants.h  control.h  generic.h  modeling.h  tools.h
src/: test.cpp
